--- a/src/app/tabs/tab3/tab3.page.html
+++ b/src/app/tabs/tab3/tab3.page.html
@@ -7,7 +7,7 @@
       Criar post
     </ion-title>
 
-    <ion-chip slot="end" [class]='(citySelected.trim().length && postForm.valid)?"citySelected":""' (click)="postThread()">
+    <ion-chip slot="end" [class]='(citySelected.trim().length && postForm.valid)?"selected":""' (click)="postThread()">
       <ion-label>Postar</ion-label>
     </ion-chip>
 
