--- a/src/app/components/comentario/comentario.component.scss
+++ b/src/app/components/comentario/comentario.component.scss
@@ -7,13 +7,13 @@
 .divComment{
   display: flex;
   margin-bottom: 4px;
+  flex-direction: column;
 }
 
 //=============================================================================================================//
 
 .divEsquerda{
   display: flex;
-  flex-direction: column;
   align-items: center;
   min-width: 24px;
   padding-top: 6px;
@@ -42,11 +42,10 @@
   align-items:center;
 }
 
-.grid{
-  display:grid;
-}
+
 
 .divTitulo{
+  margin-left: 5px;
   padding-top: 2px;
   display: flex;
   align-items:baseline;
